changed gridExampleTest and relocated testNG runners