@@ -1,10 +1,11 @@
 package seleniumTestNGGridTest;
 
 import org.openqa.selenium.By;
-import org.openqa.selenium.Platform;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.chrome.ChromeOptions;
+import org.openqa.selenium.firefox.FirefoxOptions;
+import org.openqa.selenium.remote.CapabilityType;
 import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.RemoteWebDriver;
 import org.testng.annotations.AfterClass;
@@ -12,17 +13,21 @@ import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
 public class GridExampleTest {
     static WebDriver driver;
 
     @BeforeClass
     public static void setupTest() throws MalformedURLException {
-        ChromeOptions options = new ChromeOptions();
+        ChromeOptions chromeOptions = new ChromeOptions();
+        FirefoxOptions firefoxOptions = new FirefoxOptions();
         DesiredCapabilities caps = new DesiredCapabilities();
-        options.setCapability("platform", Platform.WINDOWS);
-        driver = new RemoteWebDriver(new URL("http://localhost:4444/wd/hub"), options);
+        caps.setCapability(CapabilityType.BROWSER_NAME, "chrome");
+        caps.setCapability(CapabilityType.BROWSER_NAME, "firefox");
+        caps.setCapability(ChromeOptions.CAPABILITY, chromeOptions);
+        caps.setCapability(FirefoxOptions.FIREFOX_OPTIONS, firefoxOptions);
+        driver = new RemoteWebDriver(URI.create("http://localhost:4444/wd/hub").toURL(), firefoxOptions);
     }
     @Test
     public void T01_FacebookLogin() {
